--- a/words.html
+++ b/words.html
@@ -24,7 +24,7 @@ When I first saw you, it was as if time stood still my heart found its home in y
 
 When you gave me the first ring on my birthday, it wasn’t just a gift, it was a vow written in silence,a promise I keep close to my soul. From then on, I knew I loved you more than anything, more than anyone.
 
-I will never leave you. I will always care for you—not as your mom, dad, brother, relatives, or friends, but as your only one—the one meant to hold you, to lift you, to carry you as my dearest treasure.
+I will never leave you. I will always care for you, not as your mom, dad, brother, relatives, or friends, but as your only one, the one meant to hold you, to lift you, to carry you as my dearest treasure.
 
 For now, I may not be able to change what weighs on your heart, but I promise that one day I will. One day, I will be your strength, your comfort, your family, your everything.
 
@@ -35,4 +35,5 @@ Dugaa Hanan
     </p>
   </div>
 </body>
+
 </html>
